# MechInterp

./: MechInterpFeatureMeaning.py  MechInterpInitialInvestigation.py  MechInterpScratch.py  ModelInterpreter.py  README.md  SETUP.md  pyproject.toml
