[project]
name = "mechinterp"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "transformer-lens (>=2.15.0,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "sae-lens (>=5.6.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
